--- a/ApiNameDays/appsettings.serilog.json
+++ b/ApiNameDays/appsettings.serilog.json
@@ -2,10 +2,7 @@
     "Serilog": {
         "WriteTo": [
             {
-                "Name": "Console",
-                "Args": {
-                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} aaaaaaa [{Level}] [{SourceContext}] [{EventId}] {Message}{NewLine}{Exception}"
-                }
+                "Name": "Console"
             },
             {
                 "Name": "Seq",
