--- a/ApiNameDays/appsettings.serilog.json
+++ b/ApiNameDays/appsettings.serilog.json
@@ -1,5 +1,8 @@
 ﻿{
     "Serilog": {
+        "Properties": {
+            "AppName": "WebNames"
+        },
         "WriteTo": [
             {
                 "Name": "Console"
