--- a/ApiNameDays/appsettings.serilog.json
+++ b/ApiNameDays/appsettings.serilog.json
@@ -1,7 +1,8 @@
 ﻿{
     "Serilog": {
         "Properties": {
-            "AppName": "WebNames"
+            "AppName": "WebNames",
+            "Version": "1.0.1"
         },
         "WriteTo": [
             {
