--- a/ApiNameDays/appsettings.serilog.json
+++ b/ApiNameDays/appsettings.serilog.json
@@ -2,7 +2,8 @@
     "Serilog": {
         "Properties": {
             "AppName": "WebNames",
-            "Version": "1.0.1"
+            "Version": "1.0.2",
+            "Firma": "Full"
         },
         "WriteTo": [
             {
