--- a/ApiNameDays/appsettings.serilog.json
+++ b/ApiNameDays/appsettings.serilog.json
@@ -3,7 +3,7 @@
         "Properties": {
             "AppName": "WebNames",
             "Version": "1.0.2",
-            "Firma": "Full"
+            "Firma": "Fullcom"
         },
         "WriteTo": [
             {
