--- a/ApiNameDays/appsettings.serilog.json
+++ b/ApiNameDays/appsettings.serilog.json
@@ -1,7 +1,7 @@
 ﻿{
     "Serilog": {
         "Properties": {
-            "AppName": "WebNames",
+            "AppName": "ApiNames",
             "Version": "1.0.2",
             "Firma": "Fullcom"
         },
